Migrating updateEmployee response to a non JPA record
