# openapi/openapi.yaml
@@ -24,7 +24,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Employee"
+                $ref: "#/components/schemas/EmployeeRecord"
     put:
       tags:
       - employee-controller
@@ -48,7 +48,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Employee"
+                $ref: "#/components/schemas/EmployeeRecord"
     delete:
       tags:
       - employee-controller
@@ -93,7 +93,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Employee"
+                $ref: "#/components/schemas/EmployeeRecord"
 components:
   schemas:
     Employee:
@@ -123,11 +123,15 @@ components:
       required:
         - dundieAwards
         - firstName
+        - id
         - lastName
         - organizationId
         - organizationName
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         firstName:
           type: string
         lastName:
